// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab canSwipe 1`] = `
<div
  class="za-tab theme-primary"
>
  <div
    class="za-tab-header"
  >
    <ul
      role="tablist"
    >
      <li
        class="za-tab-header-item active"
        role="tab"
      >
        选项卡1
      </li>
      <li
        class="za-tab-header-item"
        role="tab"
      >
        选项卡2
      </li>
    </ul>
    <div
      class="za-tab-line"
      style="width:50%;left:0%;"
    />
  </div>
  <div
    class="za-tab-container"
  >
    <div
      class="za-swipe"
    >
      <div
        class="za-swipe-items"
        style="white-space:nowrap;"
      >
        <div
          class="za-swipe-item"
        >
          <div>
            试试点我左滑
          </div>
        </div>
        <div
          class="za-swipe-item"
        >
          <div>
            试试点我右滑
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tab lineWidth is auto 1`] = `
<div
  className="za-tab theme-primary"
>
  <div
    className="za-tab-header"
  >
    <ul
      role="tablist"
    >
      <li
        className="za-tab-header-item active"
        onClick={[Function]}
        role="tab"
      >
        选项卡1
      </li>
      <li
        className="za-tab-header-item"
        onClick={[Function]}
        role="tab"
      >
        选项卡2
      </li>
    </ul>
    <div
      className="za-tab-line"
      style={
        Object {
          "backgroundColor": "transparent",
          "left": "0%",
          "width": "50%",
        }
      }
    >
      <span
        className="za-tab-line-inner"
        style={
          Object {
            "width": "auto",
          }
        }
      />
    </div>
  </div>
  <div
    className="za-tab-container"
  >
    <TabPanel
      prefixCls="za-tab-panel"
      selected={true}
      title="选项卡1"
    >
      <div>
        试试点我左滑
      </div>
    </TabPanel>
    <TabPanel
      prefixCls="za-tab-panel"
      selected={false}
      title="选项卡2"
    >
      <div>
        试试点我右滑
      </div>
    </TabPanel>
  </div>
</div>
`;

exports[`Tab lineWidth is auto 2`] = `
<div
  className="za-tab theme-primary"
>
  <div
    className="za-tab-header"
  >
    <ul
      role="tablist"
    >
      <li
        className="za-tab-header-item active"
        onClick={[Function]}
        role="tab"
      >
        选项卡1
      </li>
      <li
        className="za-tab-header-item"
        onClick={[Function]}
        role="tab"
      >
        选项卡2
      </li>
    </ul>
    <div
      className="za-tab-line"
      style={
        Object {
          "backgroundColor": "transparent",
          "left": "0%",
          "width": "50%",
        }
      }
    >
      <span
        className="za-tab-line-inner"
        style={
          Object {
            "width": 30,
          }
        }
      />
    </div>
  </div>
  <div
    className="za-tab-container"
  >
    <TabPanel
      prefixCls="za-tab-panel"
      selected={true}
      title="选项卡1"
    >
      <div>
        试试点我左滑
      </div>
    </TabPanel>
    <TabPanel
      prefixCls="za-tab-panel"
      selected={false}
      title="选项卡2"
    >
      <div>
        试试点我右滑
      </div>
    </TabPanel>
  </div>
</div>
`;

exports[`Tab renders correctly 1`] = `
<div
  class="za-tab theme-primary"
>
  <div
    class="za-tab-header"
  >
    <ul
      role="tablist"
    >
      <li
        class="za-tab-header-item active"
        role="tab"
      >
        选项卡1
      </li>
      <li
        class="za-tab-header-item"
        role="tab"
      >
        选项卡2
      </li>
    </ul>
    <div
      class="za-tab-line"
      style="width:50%;left:0%;"
    />
  </div>
  <div
    class="za-tab-container"
  >
    <div
      class="za-tab-panel-item active"
      role="tabpanel"
    >
      <div>
        试试点我左滑
      </div>
    </div>
    <div
      class="za-tab-panel-item"
      role="tabpanel"
    >
      <div>
        试试点我右滑
      </div>
    </div>
  </div>
</div>
`;
